--- a/css/main.css
+++ b/css/main.css
@@ -1742,7 +1742,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #b0c1e7;
+  background: #ddffa7;
 }
 .links-of-blogroll {
   font-size: 13px;
