--- a/css/main.css
+++ b/css/main.css
@@ -1742,7 +1742,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #381c08;
+  background: #93ff13;
 }
 .links-of-blogroll {
   font-size: 13px;
